fix(config): 优化 UDS 配置初始化与权限设置
- 将静态初始化逻辑重构为实例方法 init，支持运行时检查
- 检测 /var/run 目录可写性，不可写时回退至 /tmp/app/quarkus.sock
- 简化权限设置代码，使用 PosixFilePermission.values() 设置完全开放
- 增加父目录创建逻辑，捕获并处理 FileAlreadyExistsException